--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ body {
     margin-left: 4em;
 }
 menu {
+    z-index: 999;
     width: 50%;
     backdrop-filter: blur(6px);
     background-color: #ffffff0f;
@@ -330,6 +331,33 @@ header {
     .section-03 {
         grid-area: 2/6/8/9;
     }
+    .crw-hero {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: calc(100vh - 11vh);
+    }
+    .crw-left,
+    .crw-right {
+        text-align: center;
+        width: 100%;
+        height: 50%;
+    }
+    .crw-right img {
+        width: initial;
+    }
+    .crw-text-aria p:nth-child(2) {
+        grid-area: 2/2/2/4;
+    }
+    .crw-text-aria p:first-child {
+        grid-area: 1/2/1/4;
+    }
+    .crw-text-aria .dot-indicator {
+        grid-row: 8/8;
+        grid-column: 2/4;
+        place-items: center;
+        justify-content: center;
+    }
 }
 
 @media (max-width: 768px) {
@@ -422,5 +450,36 @@ header {
     .section-02 {
         text-align: center;
         grid-area: 10/2/12/8;
+    }
+    .crw-right {
+        align-items: flex-end;
+        position: relative;
+    }
+    .crw-right::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        height: 1px;
+        background-color: #fff;
+        width: 100%;
+    }
+    .crw-hero {
+        flex-direction: column-reverse;
+    }
+    .crw-text-aria p:nth-child(2) {
+        grid-area: 3/2/3/4;
+    }
+    .crw-text-aria p:first-child {
+        grid-area: 3/2/2/4;
+    }
+    .crw-text-aria .dot-indicator {
+        grid-area: 1/2/1/4;
+    }
+    .crw-right img {
+        width: 14rem;
+    }
+    .crw-text-aria p:nth-child(3) {
+        grid-area: 4/1/8/5;
+        padding: 0 10px;
     }
 }
